2006-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: added an optional menu parameter to
	the register call to simplify menu registration. Also restored
	menupath specific mangling of the procedure arguments.

	* plug-ins/pygimp/plug-ins/*.py: use the menu parameter instead
	of defining a function to call on query.

	* plug-ins/pygimp/plug-ins/sphere.py: do it old-style here for
	testing.

2006-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod/sliba.c (aref1): when accessing members
	of tc_byte_array, cast them to guint8.

2006-08-16  Michael Schumacher  <schumaml@cvs.gnome.org>

	* libgimpcolor/gimpcolor.def 
	* libgimpwidgets/gimpwidgets.def: added some missing entries

2006-08-16  Michael Schumacher  <schumaml@cvs.gnome.org>

	* app/Makefile.am: added $(SYMPREFIX) to the -u flags

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added menu_register method.

	* plug-ins/pygimp/plug-ins/*.py: use gimp.menu_register().

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: allow '-' in procedure and parameter
	names.

	* plug-ins/pygimp/plug-ins/*.py: use canonical procedure and
	parameter names.

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/*.py: use gimp_plugin_menu_register().

2006-08-16  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin.c: improved debugging output.

	* libgimp/gimppaletteselect.c: the palette callback gets passed
	the number of colors.

2006-08-16  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: cleanup.

	* app/tools/gimpbrushtool.c: don't include gimp-intl.h.

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (autocrop): fixed overzealousness
	when cropping on a drawable border (bug #337888).

2006-08-16  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: actually enable tile cache locking and
	added a missing lock in tile_idle_preswap(). Should fix bug #346923.
